src/test/resources/tests/typeError/mathPowTooManyArgs.qg

init {
    val = pow(1,2,3)
}

run true

input(a,b) true
